--- a/ai-docs-bot/.env.example
+++ b/ai-docs-bot/.env.example
@@ -7,6 +7,16 @@ OPENAI_API_KEY=sk-your-api-key
 OPENAI_API_BASE=https://api.openai.com/v1
 LLM_MODEL=gpt-4o-mini
 
+# LLM Provider Configuration
+# Options: "openai" or "ollama"
+LLM_PROVIDER=openai
+
+# Ollama Configuration (only used when LLM_PROVIDER=ollama)
+OLLAMA_MODEL=llama3.2
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_TIMEOUT=120.0
+OLLAMA_CONTEXT_WINDOW=8192
+
 # Data Sources
 DOCS_SITEMAP_URL=https://opencode.ai/docs/sitemap.xml
 GITHUB_REPO_URL=https://github.com/anomalyco/opencode
